k8s/ingredients/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingredients-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ingredients
