k8s/ingredients/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingredients-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/ingredients
            pathType: "Prefix"
            backend:
              service:
                name: ingredients-service
                port:
                  number: 3000
